# SolitaireCardGames

./: CMakeLists.txt  README.md  command_guide
src/: game_logic.cpp  game_logic.hpp  main_cli.cpp  main_gui.cpp
src/gui/: game_window.cpp  game_window.hpp
src/menu/: menu.cpp  menu.hpp
src/solitaires/lacune/: lacune_window.cpp  lacune_window.hpp
src/solitaires/one_two_three/: game_window.cpp  game_window.hpp
